# ml-blueprint

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: example.yaml  example_sklearn.yaml  example_torch.yaml
data/: sample.csv
ml_classess/: ex2.ipynb
scripts/: reset-env.ps1
src/ml_blueprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mlb/: cli.py  venv.md
src/mlb/core/: __init__.py  artifacts.py  config.py  logging.py  paths.py  seed.py  versioning.py
src/mlb/data/: __init__.py  align.py  io.py  schema.py  split.py
src/mlb/eval/: metrics.py  plots.py
src/mlb/models/sklearn/: estimators.py  pipeline.py  train.py
src/mlb/models/torch/: callbacks.py  dataset.py  export.py  infer.py  losses.py  signature.py  tabular_model.py  torch_metrics.py  torch_train.py
src/mlb/runners/: __init__.py  run_predict.py  run_train.py
tests/: test_core_artifacts.py  test_core_config.py  test_core_logging.py  test_core_paths.py  test_core_seed.py  test_data_align.py  test_data_io.py  test_data_split.py  test_sklearn_train_smoke.py  test_torch_feature_signature.py  test_torch_predict_smoke.py  test_torch_train_smoke.py
